[tool.poetry]
name = "nornickelagent"
version = "0.1.0"
description = ""
authors = ["Egor Polyakov <leftgoga@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
trafilatura = "^2.0.0"
pymupdf = "^1.25.3"
pdfplumber = "^0.11.4"
texify = "^0.2.1"
tiktoken = "^0.9.0"

pandas = "^2.2.3"
razdel = "^0.5.0"
tabulate = "^0.9.0"
torch = {version = "^2.6.0+cu124", source = "pytorch-gpu"}

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
